--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,124 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/*#####################*/
+/*CSS a baixo são do Menu da LandPage*/
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+}
+body{
+  background-color: #fff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.max-width{
+  max-width: 1300px;
+  padding: 0 10px;
+  margin: auto;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+.navbar .logo a{
+  color: #1f80e0;
+  font-size: 35px;
+  font-weight: 500px
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.navbar{
+  position:fixed;
+  width:100%;
+  z-index:999;
+  padding:20px 0;
+  background-color: #DCDCDC;
+  border-bottom: solid #1b202a 1px;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+.navbar .max-width{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.navbar .menu li{
+    list-style: none;
+    display: inline-flex;
+
+}
+
+.navbar .menu li a{
+  display: block;
+  color: #000000;
+  font-size: 18px;
+  font-width: 400px;
+  margin-left: 25px;
+
+}
+
+.menu-btn{
+  color:#000000;
+  font-size: 23px;
+  cursor:pointer;
+  /*display:none;*/
+}
+
+section{
+  padding:50px 0;
+  
+}
+@media(max-width:690px){
+  section{
+    padding:20px 0;
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.top{
+  color:#000000;
+  display:flex;
+  background:url("../public/banner_top.jpg");
+  height:100vh;
+  min-height:500px;
+  background-size:cover;
+  background-attachmet:fixed;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.top .max-width{
+  width:100%;
+  display:flex;
+
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.top .top-content .text-1{
+  font-size:25px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.top .top-content .text-2{
+  font-size:55px;
+  font-weight:400px;
+  margin-left: -3px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.top .top-content .text-3{
+  font-size:32px;
+  margin:5px 0;
 }
+
+.top .top-content a{
+    display:inline-block;
+    background-color:#1E90FF;
+    color:#fff;
+    font-size:25px;
+    padding:12px 36px;
+    margin-top:20px;
+    font-weight:300;
+    border-radius:6px;
+    border: 2px solid #fff;
+    transition:all 0.3s ease;
+}
+
+.top .top-content a:hover{
+  color:#fff;
+  background:none;
+
+}
+
+
+
